@@ -40,6 +40,7 @@
 			<ul>
 				<li>Naming functionality for builds</li>
 				<li>Fixed Finger Offensive damage computation</li>
+				<li>Fixed A Whistle Perfect Dodge bonus computation</li>
 				<li>Shield Chain now take into consideration race defense bypass</li>
 				<li>Fixed Stone Skin, Anti Magic, Magic Mirror and Keeping skills</li>
 			</ul>
