@@ -1,4 +1,5 @@
 [2020-05-01]
+- Fixed A Whistle Perfect Dodge bonus computation
 - Fixed Stone Skin, Anti Magic, Magic Mirror and Keeping skills
 
 [2020-04-26]
